--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.input:focus{
+    border: none;
+}
 .App {
-    text-align: center;
+    background-color: #222;
+    color: #eee;
+    height: 100vh;
+    width: 100%;
 }
 
 .header {
